# Offline-Translator

./: README.md  pyproject.toml
src/offline_translator/models/: __init__.py
src/offline_translator/pipelines/: languages.py  nllb_pipeline.py
