[tool.poetry]
name = "offline-translator"
version = "0.1.0"
description = "Offline language translator with Pytorch Models"
authors = [
    "Nikita Davidchuk <bizy18588@gmail.com>",
    "Yuly Gorbatkov <me@amayakasa.xyz>"
]
maintainers = [
    "Yuly Gorbatkov <me@amayakasa.xyz>",
    "Nikita Davidchuk <bizy18588@gmail.com>"
]
license = "GNU GPL v3.0"
readme = "README.md"
packages = [{include = "offline_translator"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^1.13.1", source = "pytorch"}
transformers = "^4.26.1"
fastapi = "^0.93.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
